# OOP_14.1

./: .coverage  README.md  main.py  pyproject.toml
htmlcov/: class_index.html
src/: products_and_categories.py
tests/: test_classes.py
